--- a/over.html
+++ b/over.html
@@ -11,18 +11,14 @@
             --primary-dark: #16a34a;
             --secondary: #64748b;
             --bg-dark: #000000;
-            --bg-card: #000000;
+            --bg-card: #111111;
             --bg-surface: #1e293b;
             --text-primary: #ffffff;
-            --text-secondary: #cbd5e1;
+            --text-secondary: #a3bffa;
             --text-muted: #94a3b8;
-            --border: #374151;
-            --success: #10b981;
-            --warning: #f59e0b;
-            --danger: #ef4444;
-            --info: #3b82f6;
-            --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.2), 0 2px 4px -1px rgba(0, 0, 0, 0.1);
-            --radius: 8px;
+            --border: #2d3748;
+            --shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            --radius: 6px;
         }
 
         * {
@@ -33,11 +29,10 @@
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            background: linear-gradient(135deg, var(--bg-dark) 0%, #1a202c 100%);
+            background: var(--bg-dark);
             color: var(--text-primary);
-            line-height: 1.6;
-            min-height: 100vh;
-            padding: 20px;
+            line-height: 1.5;
+            padding: 15px;
         }
 
         .container {
@@ -46,11 +41,10 @@
         }
 
         header {
-            background: rgba(30, 41, 59, 0.95);
-            backdrop-filter: blur(10px);
+            background: var(--bg-surface);
             border-radius: var(--radius);
-            padding: 1.5rem;
-            margin-bottom: 2rem;
+            padding: 1rem;
+            margin-bottom: 1.5rem;
             box-shadow: var(--shadow);
             display: flex;
             align-items: center;
@@ -62,45 +56,42 @@
         .logo-container {
             display: flex;
             align-items: center;
-            gap: 0.75rem;
+            gap: 0.5rem;
         }
 
         .logo-img {
-            width: 40px;
-            height: 40px;
-            border-radius: 6px;
+            width: 35px;
+            height: 35px;
+            border-radius: 4px;
         }
 
         .logo-text {
-            font-size: 1.5rem;
-            font-weight: 700;
-            background: linear-gradient(135deg, var(--primary), #06d6a0);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            font-size: 1.3rem;
+            font-weight: 600;
+            color: var(--primary);
         }
 
         h1 {
-            font-size: 1.75rem;
+            font-size: 1.5rem;
             font-weight: 600;
         }
 
         .button-group {
             display: flex;
-            gap: 0.75rem;
+            gap: 0.5rem;
         }
 
         .btn {
-            padding: 0.75rem 1.25rem;
+            padding: 0.6rem 1rem;
             border: none;
             border-radius: var(--radius);
-            font-weight: 600;
-            font-size: 0.875rem;
+            font-weight: 500;
+            font-size: 0.85rem;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: background 0.2s;
             display: flex;
             align-items: center;
-            gap: 0.5rem;
-            box-shadow: var(--shadow);
+            gap: 0.3rem;
         }
 
         .btn-primary {
@@ -110,32 +101,30 @@
 
         .btn-primary:hover {
             background: var(--primary-dark);
-            transform: translateY(-2px);
         }
 
         .btn-secondary {
-            background: var(--bg-surface);
+            background: var(--bg-card);
             color: var(--text-primary);
         }
 
         .btn-secondary:hover {
-            background: var(--secondary);
-            transform: translateY(-2px);
+            background: #2d3748;
         }
 
         .loading-container {
             background: var(--bg-card);
             border-radius: var(--radius);
-            padding: 2rem;
+            padding: 1.5rem;
             text-align: center;
             box-shadow: var(--shadow);
-            margin-bottom: 2rem;
+            margin-bottom: 1.5rem;
         }
 
         .spinner {
-            width: 32px;
-            height: 32px;
-            margin: 0 auto 1rem;
+            width: 28px;
+            height: 28px;
+            margin: 0 auto 0.8rem;
             border: 3px solid rgba(34, 197, 94, 0.3);
             border-top: 3px solid var(--primary);
             border-radius: 50%;
@@ -151,15 +140,15 @@
             background: rgba(239, 68, 68, 0.1);
             border: 1px solid rgba(239, 68, 68, 0.3);
             border-radius: var(--radius);
-            padding: 2rem;
+            padding: 1.5rem;
             text-align: center;
-            margin-bottom: 2rem;
+            margin-bottom: 1.5rem;
             color: var(--danger);
         }
 
         .error-icon {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
+            font-size: 2rem;
+            margin-bottom: 0.8rem;
         }
 
         .table-container {
@@ -167,127 +156,106 @@
             border-radius: var(--radius);
             box-shadow: var(--shadow);
             overflow-x: auto;
-            border: 1px solid var(--border);
         }
 
         table {
             width: 100%;
-            border-collapse: separate;
-            border-spacing: 0;
-            font-size: 0.875rem;
+            border-collapse: collapse;
+            font-size: 0.9rem;
         }
 
         th {
             background: var(--bg-surface);
             color: var(--text-primary);
-            padding: 1.2rem 1.5rem;
+            padding: 0.8rem 1rem;
             text-align: left;
-            font-weight: 700;
-            position: sticky;
-            top: 0;
-            z-index: 10;
-            border-bottom: 3px solid var(--border);
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+            font-weight: 600;
+            border-bottom: 2px solid var(--border);
         }
 
         th:hover {
-            background: var(--secondary);
-            cursor: pointer;
+            background: #2d3748;
         }
 
         th.filtered {
-            border-bottom: 3px solid var(--primary);
+            border-bottom: 2px solid var(--primary);
             color: var(--primary);
         }
 
         td {
-            padding: 1rem 1.5rem;
-            border-bottom: 2px solid var(--border);
+            padding: 0.7rem 1rem;
+            border-bottom: 1px solid var(--border);
             vertical-align: middle;
-            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-        }
-
-        tbody tr {
-            transition: background 0.3s ease;
         }
 
         tbody tr:hover {
-            background: rgba(255, 255, 255, 0.1);
+            background: #1a202c;
         }
 
         .league-name {
             display: inline-flex;
             align-items: center;
-            gap: 0.5rem;
-            padding: 0.5rem 1rem;
-            border-radius: 50px;
-            font-size: 0.85rem;
-            font-weight: 700;
+            gap: 0.3rem;
+            padding: 0.3rem 0.8rem;
+            border-radius: 20px;
+            font-size: 0.8rem;
+            font-weight: 600;
             color: #000000;
-            background: #ffffff;
-            text-shadow: none;
+            background: #e5e7eb;
         }
 
         .team-match, .date-time {
             display: flex;
             flex-direction: column;
-            gap: 0.3rem;
+            gap: 0.2rem;
         }
 
         .team-name {
-            font-weight: 600;
+            font-weight: 500;
         }
 
         .vs {
             color: var(--text-muted);
-            font-size: 0.8rem;
+            font-size: 0.75rem;
         }
 
         .stat-pill {
             display: inline-block;
-            padding: 0.3rem 1rem;
-            border-radius: 16px;
-            font-size: 0.8rem;
-            font-weight: 600;
-            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+            padding: 0.2rem 0.7rem;
+            border-radius: 12px;
+            font-size: 0.75rem;
+            font-weight: 500;
         }
 
-        .positive-high { background: rgba(16, 185, 129, 0.9); color: white; }
-        .positive-medium { background: rgba(16, 185, 129, 0.7); color: white; }
-        .positive-low { background: rgba(16, 185, 129, 0.5); color: white; }
-        .neutral { background: rgba(107, 114, 128, 0.4); color: white; }
-        .negative-low { background: rgba(244, 63, 94, 0.5); color: white; }
-        .negative-medium { background: rgba(244, 63, 94, 0.7); color: white; }
-        .negative-high { background: rgba(244, 63, 94, 0.9); color: white; }
+        .positive-high { background: #10b981; color: white; }
+        .positive-medium { background: #34d399; color: white; }
+        .positive-low { background: #6ee7b7; color: white; }
+        .neutral { background: #64748b; color: white; }
+        .negative-low { background: #f87171; color: white; }
+        .negative-medium { background: #ef4444; color: white; }
+        .negative-high { background: #dc2626; color: white; }
 
         .top-match {
-            background: linear-gradient(135deg, var(--bg-card) 0%, rgba(34, 197, 94, 0.2) 100%) !important;
-            border-left: 6px solid var(--primary);
-            font-weight: 600;
-        }
-
-        .tooltip {
-            position: relative;
-            display: inline-block;
-            cursor: help;
+            background: #1e293b;
+            border-left: 4px solid var(--primary);
         }
 
         .tooltip .tooltiptext {
             visibility: hidden;
-            width: 200px;
+            width: 180px;
             background: var(--bg-surface);
             color: var(--text-primary);
             text-align: center;
             border-radius: var(--radius);
-            padding: 0.6rem;
+            padding: 0.5rem;
             position: absolute;
             z-index: 20;
             bottom: 125%;
             left: 50%;
             transform: translateX(-50%);
             opacity: 0;
-            transition: opacity 0.3s;
-            font-size: 0.8rem;
+            transition: opacity 0.2s;
+            font-size: 0.7rem;
             box-shadow: var(--shadow);
         }
 
@@ -305,9 +273,9 @@
             background: var(--bg-card);
             border-radius: var(--radius);
             box-shadow: var(--shadow);
-            padding: 1.5rem;
+            padding: 1.2rem;
             z-index: 1000;
-            max-width: 400px;
+            max-width: 350px;
             width: 90%;
         }
 
@@ -316,64 +284,61 @@
         }
 
         .filter-modal h3 {
-            font-size: 1.125rem;
-            margin-bottom: 1rem;
+            font-size: 1rem;
+            margin-bottom: 0.8rem;
         }
 
         .filter-options {
-            max-height: 300px;
+            max-height: 250px;
             overflow-y: auto;
-            margin-bottom: 1rem;
+            margin-bottom: 0.8rem;
         }
 
         .filter-options label {
             display: flex;
             align-items: center;
-            gap: 0.5rem;
-            padding: 0.5rem;
-            cursor: pointer;
+            gap: 0.4rem;
+            padding: 0.4rem;
         }
 
         .filter-options label:hover {
-            background: var(--bg-surface);
-            border-radius: 4px;
+            background: #2d3748;
         }
 
         .filter-modal .buttons {
             display: flex;
-            gap: 0.5rem;
+            gap: 0.4rem;
             justify-content: flex-end;
         }
 
         .table-container::-webkit-scrollbar {
-            height: 8px;
+            height: 6px;
         }
         .table-container::-webkit-scrollbar-thumb {
             background: var(--secondary);
-            border-radius: 4px;
+            border-radius: 3px;
         }
         .table-container::-webkit-scrollbar-track {
-            background: var(--bg-dark);
+            background: var(--bg-card);
         }
 
-        /* League-specific colors */
-        .league-name[data-league="Esoccer H2H GG League - 8 mins play"] { background: #8A2BE2; color: #000000; }
-        .league-name[data-league="Esoccer Battle - 8 mins play"] { background: #FF4C4C; color: #000000; }
-        .league-name[data-league="Esoccer Battle Volta - 6 mins play"] { background: #FFD700; color: #000000; }
-        .league-name[data-league="Esoccer GT Leagues – 12 mins play"] { background: #32CD32; color: #000000; }
-        .league-name[data-league="Esoccer Adriatic League - 10 mins play"] { background: #1E90FF; color: #000000; }
+        .league-name[data-league="Esoccer H2H GG League - 8 mins play"] { background: #a855f7; }
+        .league-name[data-league="Esoccer Battle - 8 mins play"] { background: #f87171; }
+        .league-name[data-league="Esoccer Battle Volta - 6 mins play"] { background: #facc15; }
+        .league-name[data-league="Esoccer GT Leagues – 12 mins play"] { background: #34d399; }
+        .league-name[data-league="Esoccer Adriatic League - 10 mins play"] { background: #60a5fa; }
 
         @media (max-width: 768px) {
             th, td {
-                padding: 0.9rem 1rem;
+                padding: 0.6rem 0.8rem;
             }
 
             .league-name {
-                font-size: 0.75rem;
+                font-size: 0.7rem;
             }
 
             .stat-pill {
-                padding: 0.2rem 0.8rem;
+                padding: 0.15rem 0.5rem;
             }
         }
     </style>
@@ -526,17 +491,29 @@
             }
 
             processGameStats(data, game) {
-                // Valores fixos para teste conforme solicitado (3, 1.8, 1E-4D, 0E-5D)
+                const homeGames = data.players?.playerA?.stats?.games || [];
+                const awayGames = data.players?.playerB?.stats?.games || [];
+                const allGames = [...homeGames, ...awayGames];
+
+                const homeGoals = this.calculateAverageGoals(homeGames, 0);
+                const awayGoals = this.calculateAverageGoals(awayGames, 1);
+                const avgGoals = (homeGoals + awayGoals) / 2;
+
+                const bttsPercent = this.calculateBTTS(allGames);
+                const overStats = this.calculateOverStats(allGames);
+                const homeRecord = this.calculateTeamRecord(homeGames, game.home);
+                const awayRecord = this.calculateTeamRecord(awayGames, game.away);
+
                 return {
-                    avgGoals: 3.0,
-                    homeAvgGoals: 1.8,
-                    awayAvgGoals: 1.8,
-                    bttsPercent: 0,
-                    over15: 0,
-                    over25: 0,
-                    over35: 0,
-                    homeRecord: { wins: 0, draws: 1, losses: 4 },
-                    awayRecord: { wins: 0, draws: 0, losses: 5 }
+                    avgGoals: Number(avgGoals.toFixed(2)),
+                    homeAvgGoals: Number(homeGoals.toFixed(1)),
+                    awayAvgGoals: Number(awayGoals.toFixed(1)),
+                    bttsPercent: bttsPercent,
+                    over15: overStats.over15,
+                    over25: overStats.over25,
+                    over35: overStats.over35,
+                    homeRecord: homeRecord,
+                    awayRecord: awayRecord
                 };
             }
 
@@ -733,24 +710,24 @@
                         <td>
                             <div class="tooltip">
                                 <span class="stat-pill">${game.homeAvgGoals}</span>
-                                <div style="font-size: 0.75rem; color: var(--text-secondary); margin-top: 0.25rem;">
+                                <div style="font-size: 0.7rem; color: var(--text-secondary);">
                                     ${game.homeRecord.draws}E-${game.homeRecord.losses}D
                                 </div>
                                 <span class="tooltiptext">
-                                    Média de gols do time da casa: ${game.homeAvgGoals}<br>
-                                    Registro: ${game.homeRecord.draws} Empates, ${game.homeRecord.losses} Derrotas
+                                    Média de gols: ${game.homeAvgGoals}<br>
+                                    Registro: ${game.homeRecord.draws}E-${game.homeRecord.losses}D
                                 </span>
                             </div>
                         </td>
                         <td>
                             <div class="tooltip">
                                 <span class="stat-pill">${game.awayAvgGoals}</span>
-                                <div style="font-size: 0.75rem; color: var(--text-secondary); margin-top: 0.25rem;">
+                                <div style="font-size: 0.7rem; color: var(--text-secondary);">
                                     ${game.awayRecord.draws}E-${game.awayRecord.losses}D
                                 </div>
                                 <span class="tooltiptext">
-                                    Média de gols do time visitante: ${game.awayAvgGoals}<br>
-                                    Registro: ${game.awayRecord.draws} Empates, ${game.awayRecord.losses} Derrotas
+                                    Média de gols: ${game.awayAvgGoals}<br>
+                                    Registro: ${game.awayRecord.draws}E-${game.awayRecord.losses}D
                                 </span>
                             </div>
                         </td>
@@ -799,8 +776,8 @@
                 title.textContent = `Filtrar por ${this.getColumnLabel(this.activeColumn)}`;
                 const uniqueValues = [...new Set(this.gamesData.map(game => this.getColumnValue(game, this.activeColumn).toString()))].sort();
                 options.innerHTML = `
-                    <label><input type="checkbox" data-action="sort-asc" ${this.columnFilters[this.activeColumn]?.sort === 'asc' ? 'checked' : ''}> Classificar Ascendente</label>
-                    <label><input type="checkbox" data-action="sort-desc" ${this.columnFilters[this.activeColumn]?.sort === 'desc' ? 'checked' : ''}> Classificar Descendente</label>
+                    <label><input type="checkbox" data-action="sort-asc" ${this.columnFilters[this.activeColumn]?.sort === 'asc' ? 'checked' : ''}> Ascendente</label>
+                    <label><input type="checkbox" data-action="sort-desc" ${this.columnFilters[this.activeColumn]?.sort === 'desc' ? 'checked' : ''}> Descendente</label>
                     <hr>
                     ${uniqueValues.map(value => `
                         <label><input type="checkbox" value="${value}" ${this.columnFilters[this.activeColumn]?.values?.includes(value) ? 'checked' : ''}> ${value}</label>
@@ -821,7 +798,7 @@
                     leagueName: 'Liga',
                     match: 'Partida',
                     dateTime: 'Data/Hora',
-                    avgGoals: 'Média de Gols',
+                    avgGoals: 'Média Gols',
                     homeAvgGoals: 'Casa',
                     awayAvgGoals: 'Fora',
                     bttsPercent: 'BTTS',
